Measure GC time